Fix size issue of past-editions img on mobile devices, change height:100% to min-height:100%

--- a/styles/style.css
+++ b/styles/style.css
@@ -716,7 +716,7 @@ input[type="submit"]:hover {
 }
 
 .past-editions-img-container img {
-  height: 100%;
+  min-height: 100%;
 }
 
 .past-editions-img-container-nyc,
